--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 
+
   .navbar-default {
 	padding-left: 20px;
 	padding-right: 20px;
@@ -146,6 +147,10 @@ span.blink{
 
 .inline-wrapper {
   display:inline
+}
+
+body {
+  overflow-x: hidden
 }
 
 #myPic {
